Update to CivModCore 1.8.2